@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.ford.syncV4.android"
-    android:versionCode="24"
+    android:versionCode="25"
     android:versionName="1.3.18 (CW10)" >
 
     <!-- Version 12 is minimum to support the USB Accessory mode -->
